<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/back1"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="#FFFFFF"
        android:background="@drawable/toolbar_gradient"
        app:titleMarginStart="30dp"
        android:outlineSpotShadowColor="#ffffff"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left|center"
            android:weightSum="5">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="40dp"
                android:layout_weight="0.3"
                android:src="@drawable/unsaid_logo"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.7"
                android:text="Unsaid Wish"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:layout_marginLeft="10dp"
                android:textSize="20dp"/>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment_register">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:textSize="50sp"
        android:textColor="#000"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="sans-serif-condensed"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag"
        android:textSize="17sp"
        android:textColor="#520260"
        android:textStyle="italic"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="150dp"
        android:layout_marginBottom="50dp"/>


    <EditText
        android:id="@+id/et_fname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="First name"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="-20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:fontFamily="sans-serif-light"
        android:inputType="textEmailAddress"
        android:background="@drawable/et_custom"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_mname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="Middle name"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:fontFamily="sans-serif-light"
        android:inputType="textEmailAddress"
        android:background="@drawable/et_custom"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_lname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="Last name"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:fontFamily="sans-serif-light"
        android:inputType="textEmailAddress"
        android:background="@drawable/et_custom"
        android:textSize="15sp" />


    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/e_mail"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:fontFamily="sans-serif-light"
        android:inputType="textEmailAddress"
        android:background="@drawable/et_custom"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="20dp"
        android:weightSum="4">

        <com.hbb20.CountryCodePicker
            android:id="@+id/countrycode"
            android:layout_width="0dp"
            android:background="@drawable/et_custom"
            android:layout_height="50dp"
            android:layout_marginRight="5dp"
            app:ccpDialog_keyboardAutoPopup="false"
            app:ccp_defaultNameCode="IN"
            android:layout_weight="1.0"/>


        <EditText
            android:id="@+id/et_mobile"
            android:layout_width="0dp"
            android:layout_weight="3.0"
            android:layout_height="50dp"
            android:hint="Mobile Number"
            android:padding="15dp"
            android:layout_marginLeft="5dp"
            android:maxLength="10"
            android:inputType="number"
            android:fontFamily="sans-serif-light"
            android:layout_above="@id/et_password"
            android:background="@drawable/et_custom"
            android:textSize="15sp" />



    </LinearLayout>



    <EditText
        android:id="@+id/et_dob"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="DOB"
        android:drawableRight="@drawable/ic_date"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:focusable="false"
        android:fontFamily="sans-serif-light"
        android:inputType="textEmailAddress"
        android:background="@drawable/et_custom"
        android:textSize="15sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:orientation="horizontal"
        android:gravity="left">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_marginRight="10dp"
            android:hint="Male"
            android:textColorHint="#FFFFFF"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            />


        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="30dp"
            android:textColorHint="#FFFFFF"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:hint="Female"/>


        <RadioButton
            android:id="@+id/other"
            android:layout_width="wrap_content"
            android:layout_marginLeft="35dp"
            android:textColorHint="#FFFFFF"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:hint="Other"/>


    </RadioGroup>


    <EditText
        android:id="@+id/et_country"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="Country"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:visibility="gone"
        android:fontFamily="sans-serif-light"
        android:inputType="text"
        android:background="@drawable/et_custom"
        android:textSize="15sp" />


    <EditText
        android:id="@+id/et_state"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="State"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:visibility="gone"
        android:fontFamily="sans-serif-light"
        android:inputType="text"
        android:background="@drawable/et_custom"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_city"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="City"
        android:visibility="gone"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:fontFamily="sans-serif-light"
        android:inputType="text"
        android:background="@drawable/et_custom"
        android:textSize="15sp" />


    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:layout_marginLeft="20dp"
        android:visibility="gone"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:fontFamily="sans-serif-light"
        android:inputType="textPassword"
        android:background="@drawable/et_custom"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_repassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:visibility="gone"
        android:hint="@string/re_type_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:fontFamily="sans-serif-light"
        android:inputType="textPassword"
        android:background="@drawable/et_custom"
        android:textSize="15sp" />


    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_custome"
        android:backgroundTint="#FD4080"
        android:padding="12dp"
        android:ems="10"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_centerInParent="true"
        android:textColor="#FFFFFF"
        android:text="@string/register"/>

    <TextView
        android:id="@+id/gotologin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Already registered ? Log in"
        android:textSize="15sp"
        android:textColor="#FFFFFF"
       android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_alignParentBottom="true" />

    <View
        android:layout_width="190dp"
        android:layout_height="2dp"
        android:background="#FFFFFF"
        android:layout_gravity="center">
    </View>


</LinearLayout>

</ScrollView>

</LinearLayout>
